--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="touch-icon" sizes="180x180" href="./images/touch-icon.png" />
+    <link rel="icon" sizes="180x180" href="./images/touch-icon.png" />
   </head>
   <body class="page">
     <header class="header">
