--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture>
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -90,6 +91,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture class="filter__one">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -156,6 +158,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;CSS&gt;</span>
               <picture class="filter__two">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -219,6 +222,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;desigions&gt;</span>
               <picture class="filter__three">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -284,6 +288,7 @@
             <div class="card__poster">
               <span class="card__poster-label">care</span>
               <picture class="filter__four">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -350,6 +355,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;support&gt;</span>
               <picture class="filter__five">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -413,6 +419,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
               <picture class="filter__six">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -478,6 +485,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;experience&gt;</span>
               <picture class="filter__seven">
+                <source srcset="./images/post/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
