--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture>
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -91,7 +91,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture class="filter__one">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -158,7 +158,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;CSS&gt;</span>
               <picture class="filter__two">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -222,7 +222,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;desigions&gt;</span>
               <picture class="filter__three">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -288,7 +288,7 @@
             <div class="card__poster">
               <span class="card__poster-label">care</span>
               <picture class="filter__four">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -355,7 +355,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;support&gt;</span>
               <picture class="filter__five">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -419,7 +419,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
               <picture class="filter__six">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
@@ -485,7 +485,7 @@
             <div class="card__poster">
               <span class="card__poster-label">&lt;experience&gt;</span>
               <picture class="filter__seven">
-                <source srcset="./images/post/image.webp" type="image/webp" />
+                <source srcset="./images/image.webp" type="image/webp" />
                 <img
                   class="card__poster-image"
                   src="./images/image.png"
