--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
-              <picture class="filter__one">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__one"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -157,10 +156,9 @@
             <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;CSS&gt;</span>
-              <picture class="filter__two">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__two"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -221,10 +219,9 @@
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;desigions&gt;</span>
-              <picture class="filter__three">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__three"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -287,10 +284,9 @@
             <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="card__poster">
               <span class="card__poster-label">care</span>
-              <picture class="filter__four">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__four"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -354,10 +350,9 @@
             <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;support&gt;</span>
-              <picture class="filter__five">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__five"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -418,10 +413,9 @@
             <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
-              <picture class="filter__six">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__six"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
@@ -484,10 +478,9 @@
             <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;experience&gt;</span>
-              <picture class="filter__seven">
-                <source srcset="./images/image.webp" type="image/webp" />
+              <picture>
                 <img
-                  class="card__poster-image"
+                  class="card__poster-image filter__seven"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
