--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="icon" sizes="180x180" href="./images/touch-icon.png" />
+    <link rel="apple-touch-icon" href="./images/touch-icon.png" />
   </head>
   <body class="page">
     <header class="header">
@@ -18,32 +18,31 @@
       <h1 class="header__text">закрывающий тег</h1>
     </header>
     <main class="content container">
-      <ul class="content__post">
-        <li class="content__item">
+      <div class="content__post">
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">
               Фритрек и нулевой спринт: Подготовка к работе
             </h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
-              <picture>
-                <source srcset="./images/image.webp" type="image/webp" />
-                <img
-                  class="card__poster-image"
-                  src="./images/image.png"
-                  alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
-                />
-              </picture>
+              <img
+                class="card__poster-image"
+                src="./images/image.png"
+                alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
+              />
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                Это было самое начало пути. На этом этапе важно было
-                проникнуться основами и настроиться на учёбу. И, возможно,
-                подумать, как новые знания могут повлиять на ваше будущее.
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний о начале обучения.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  Это было самое начало пути. На этом этапе важно было
+                  проникнуться основами и настроиться на учёбу. И, возможно,
+                  подумать, как новые знания могут повлиять на ваше будущее.
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний о начале обучения.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -84,32 +83,34 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;/HTML&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__one"
+                  class="card__poster-image filter__desaturated"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                На первых этапах мы работали со страхами и сомнениями, которые
-                часто испытывают новички. Один из них — страх перед чистым
-                листом. Это, конечно же, намного сложнее, чем боязнь куска
-                бумаги. Часто за этим ощущением скрываются более глубокие
-                вопросы: с чего начать? а вдруг будет слишком сложно? что, если
-                я не справлюсь?
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний о начале первого спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  На первых этапах мы работали со страхами и сомнениями, которые
+                  часто испытывают новички. Один из них — страх перед чистым
+                  листом. Это, конечно же, намного сложнее, чем боязнь куска
+                  бумаги. Часто за этим ощущением скрываются более глубокие
+                  вопросы: с чего начать? а вдруг будет слишком сложно? что,
+                  если я не справлюсь?
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний о начале первого спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -150,29 +151,32 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;CSS&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__two"
+                  class="card__poster-image filter__oversaturated"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                Первый проект — позади! Но это всё ещё самое начало пути.
-                Радость могла быстро померкнуть и смениться ожиданием провала.
-                Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний об окончании первого спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  Первый проект — позади! Но это всё ещё самое начало пути.
+                  Радость могла быстро померкнуть и смениться ожиданием провала.
+                  Или вы, наоборот, могли вдохновиться успехами и поверить в
+                  себя.
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний об окончании первого спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -213,31 +217,33 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;desigions&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__three"
+                  class="card__poster-image filter__hue-rotate"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                На этом этапе вы уже достаточно разбирались в основах вёрстки,
-                чтобы понять, как много ещё впереди. Вы могли попытаться
-                погнаться за идеалом и понять, что он недостижим. А, может, вы
-                вовсе и не подвержены перфекционизму и вместо того, чтобы
-                сделать идеально, старались просто сделать.
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний о начале второго спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  На этом этапе вы уже достаточно разбирались в основах вёрстки,
+                  чтобы понять, как много ещё впереди. Вы могли попытаться
+                  погнаться за идеалом и понять, что он недостижим. А, может, вы
+                  вовсе и не подвержены перфекционизму и вместо того, чтобы
+                  сделать идеально, старались просто сделать.
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний о начале второго спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -278,32 +284,34 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="card__poster">
               <span class="card__poster-label">care</span>
               <picture>
                 <img
-                  class="card__poster-image filter__four"
+                  class="card__poster-image filter__inverted"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                Всё это время вы были не одиноки (хотя, возможно, иногда и
-                чувствовали, что одни против целого мира). Вас окружали
-                одногруппники, команда сопровождения и просто близкие люди,
-                которым можно пожаловаться, если очередной макет просто так не
-                поддавался. Осваивать что-то новое легче, когда рядом есть
-                единомышленники, не правда ли?
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний об окончании второго спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  Всё это время вы были не одиноки (хотя, возможно, иногда и
+                  чувствовали, что одни против целого мира). Вас окружали
+                  одногруппники, команда сопровождения и просто близкие люди,
+                  которым можно пожаловаться, если очередной макет просто так не
+                  поддавался. Осваивать что-то новое легче, когда рядом есть
+                  единомышленники, не правда ли?
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний об окончании второго спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -344,29 +352,31 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;support&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__five"
+                  class="card__poster-image filter__sepia-grayscale"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                На этом курсе вы постоянно решали разные задачи. В какой-то
-                момент вам могло показаться, что решения просто иссякли. Значит,
-                пришло время посмотреть на задачу под другим углом.
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний о начале третьего спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  На этом курсе вы постоянно решали разные задачи. В какой-то
+                  момент вам могло показаться, что решения просто иссякли.
+                  Значит, пришло время посмотреть на задачу под другим углом.
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний о начале третьего спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -407,31 +417,33 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;lifes-style: none;&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__six"
+                  class="card__poster-image filter__blurred"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                Во время учёбы часто возникает чувство, когда не знаешь, за что
-                хвататься. Вроде и проектную пора сдавать, и задачи хочется
-                порешать, и в теории получше разобраться, и жизнь не забыть
-                пожить. В такие моменты очень нужна концентрация. Вспомните,
-                откуда вы её черпали.
-              </p>
-              <p class="card__content-text">
-                Место для ваших воспоминаний об окончании третьего спринта.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  Во время учёбы часто возникает чувство, когда не знаешь, за
+                  что хвататься. Вроде и проектную пора сдавать, и задачи
+                  хочется порешать, и в теории получше разобраться, и жизнь не
+                  забыть пожить. В такие моменты очень нужна концентрация.
+                  Вспомните, откуда вы её черпали.
+                </p>
+                <p class="card__content-text">
+                  Место для ваших воспоминаний об окончании третьего спринта.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -472,33 +484,36 @@
               </div>
             </div>
           </article>
-        </li>
-        <li class="content__item">
+        </div>
+        <div class="content__item">
           <article class="card">
             <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="card__poster">
               <span class="card__poster-label">&lt;experience&gt;</span>
               <picture>
                 <img
-                  class="card__poster-image filter__seven"
+                  class="card__poster-image filter__complex"
                   src="./images/image.png"
                   alt="Фритрек у ночного лагеря, базовое изображение без наложенных фильтров"
                 />
               </picture>
             </div>
             <div class="card__content">
-              <p class="card__content-text">
-                Сейчас вы уже очень много знаете о вёрстке. Но это только
-                начало. Во-первых, впереди ещё много материала про «красотищу».
-                Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка —
-                это целый мир. И этот мир постоянно меняется. Познать его
-                полностью не получится, но это тот случай, когда важен сам
-                процесс познания. Ведь часто путь — и есть результат.
-              </p>
-              <p class="card__content-text">
-                Место, чтобы остановиться, подумать и написать, что вы
-                чувствуете в этой точке пути.
-              </p>
+              <div class="card__content-box">
+                <p class="card__content-text">
+                  Сейчас вы уже очень много знаете о вёрстке. Но это только
+                  начало. Во-первых, впереди ещё много материала про
+                  «красотищу». Во-вторых, с окончанием курса учёба не
+                  заканчивается. Вёрстка — это целый мир. И этот мир постоянно
+                  меняется. Познать его полностью не получится, но это тот
+                  случай, когда важен сам процесс познания. Ведь часто путь — и
+                  есть результат.
+                </p>
+                <p class="card__content-text">
+                  Место, чтобы остановиться, подумать и написать, что вы
+                  чувствуете в этой точке пути.
+                </p>
+              </div>
               <div class="card__buttons">
                 <button type="button" class="card__icon-button">
                   <svg
@@ -539,8 +554,8 @@
               </div>
             </div>
           </article>
-        </li>
-      </ul>
+        </div>
+      </div>
       <div class="save__container">
         <button
           type="button"
